# splot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  serial_receiver.py  splot.py  splot.ui  stream_processor.py
assets/: splot_screen_capture.mov
src/splot/: __init__.py  raw_data_viewer.py  ring_buffer.py  serial_receiver.py  splot.py  splot.ui  stream_processor.py  utilities.py
test/: example_ascii_server.py  example_binary_server.py  example_server.py
