[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splot"
version = "0.0.3"
authors = [
  { name="Nate Cermak", email="nate.cermak@starfishneuro.com" },
]
description = "A general-purpose serial plotter"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.24",
  "pyqt6>=6.5",
  "pyqtgraph>=0.13.3",
  "pyserial>=3.5",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/starfishneuroscience/splot"
Issues = "https://github.com/starfishneuroscience/splot/issues"

[project.scripts]
splot = "splot.splot:main"
